<resources>
    <string name="app_name">QuickVeggis</string>
    <string name="hello_world">Hello world!</string>
    <string name="filter">Filter</string>
    <string name="dontshow">"Don't show again"</string>
    <string name="we_got_it">We got it!</string>
    <string name="hint_bank_delivery_address">Delivery Address</string>
    <string name="hint_bank_branch">bank Name &amp; Branch</string>
    <string name="hint_bank_name">Name on Bank A/C</string>
    <string name="hint_bank_zip">Zip</string>
    <string name="hint_mobile">Mobile</string>
<string name="bank_help">"PLEASE READ:
The Cheque is of Payee's A/C an can only cleared under the same name issued."</string>
    <string name="next">Next</string>
    <string name="login_google">Log in with googFle</string>
    <string name="login_bottom2">You can also use your email to</string>
    <string name="hint_address1">Address 1</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_user_name">Username</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up_txt">By tapping "Sign Up" you agree\nto the terms &amp; conditions</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="hint_pincode">Pincode</string>
    <string name="hint_new_message">Type your message</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>
    <string name="tips">Tips</string>
    <string name="date_added">Date added:</string>
    <string name="payment_method">Payment Method:</string>
 <string name="receipt_header">"Here your Recept
WE GOT IT!
As soon as your order is delivered to you, we will rain money into your wallet."</string>
    <string name="receipt_footer">Thank you for your business</string>
    <string name="success_order">Successful Order</string>
    <string name="track">Track</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="question">Question</string>
    <string name="answers">Answers</string>
    <string name="unlock">Unlock</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="btnGetStarted">Get Started</string>
<string name="you_earned">"With QuickVeggies,
You earned"</string>
    <string name="select_gift">Please select a gift card</string>
    <string name="cash_out">Submit your requests, cash out (100$ minimum)</string>
    <string name="multiple_options">Multiple options</string>
    <string name="login_facebook">Log in with facebook</string>
    <string name="login_bottom_text">View our Privacy Policy and Terms of Use</string>
    <string name="signin_txt">Dont have an account?</string>
    <string name="create_account">Create new account</string>
    <string name="login_signin">Sign in</string>
    <string name="login_signup">Sign up</string>
    <string name="fullfilled">Fullfilled by</string>
    <string name="camera_cancel">Cancel</string>
    <string name="camera_group_help">Kindly click a group photo of your product unlocked to verify your purchase</string>
    <string name="camera_help">Can you read the text? If not, click \"Retake\"</string>
    <string name="camera_submit">Submit</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="camera_retake">Retake</string>
    <string name="price_details">Price Details</string>
    <string name="savings_details">Savings Detail</string>
    <string name="cart_total">Cart Total</string>
    <string name="shipping">Shipping</string>
    <string name="total_cart">Total Payable</string>
    <string name="filter_sortby">Sort by</string>
    <string name="filter_new">New</string>
    <string name="filter_popularity">Popularity</string>
    <string name="filter_price_low">Price low to high</string>
    <string name="filter_ending_soon">Ending soon</string>
    <string name="filter_brands_hint">Filter by brands</string>
    <string name="history_order_details">Order Details</string>
    <string name="history_items">Items</string>
    <string name="history_temp_total_delivery" formatted="false">"Sub-Total: %s"</string>
    <string name="address_no_address">No address found!</string>
    <string name="address_add_address">Add address</string>
    <string name="address_help">Add your home or workplace for faster ch4/21/2016eckouts</string>
    <string name="account_not_found">No Saved Bank accounts!</string>
    <string name="account_add_account">Add account</string>
    <string name="account_help">Add your bank account for faster payouts</string>
    <string name="survey_choose_favourite">Choose your favourite!</string>
    <string name="profile_header">"Help us learn about you \nYou'll receive a 10Rs reward as a gift."</string>
    <string name="profile_zip">Zip code</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_female">Femal</string>
    <string name="profile_ref_code">Referral code</string>
    <string name="profile_male">Male</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_shopping_count">Shopping for a family of</string>
    <string name="profile_app_that_apply">Please check all that apply</string>
    <string name="profile_poll1_1">I cook at home</string>
    <string name="profile_poll1_2">I shop for a baby product (0 to 3 yrs)</string>
    <string name="profile_poll1_3">I shop for kid product (4+ yrs)</string>
    <string name="profile_poll1_4">"I'm a pet owner"</string>
    <string name="profile_poll1_5">None of the above</string>
    <string name="profile_poll2_1">Fan of premium and organic products</string>
    <string name="profile_poll2_2">I look for health conscous items</string>
    <string name="profile_poll2_3">I hunt for biggest savings</string>
    <string name="profile_poll2_4">"I'd love to try new / unique products"</string>
    <string name="profile_poll3_1">"I'm vegetarian"</string>
    <string name="profile_poll3_2">"I'm vagan"</string>
    <string name="profile_poll3_3">I prefer gluten-free products</string>
    <string name="profile_poll3_4">"I'm lactose intolerant / allergic to milk"</string>
    <string name="profile_poll3_5">"I'm allergic to peanuts / tree nuts"</string>
    <string name="profile_poll4_1">White or Caucasian</string>
    <string name="profile_poll4_2">Black or African American</string>
    <string name="profile_poll4_3">Asian</string>
    <string name="profile_poll4_4">Hispanic or Latino</string>
    <string name="profile_shopping_style">"What's your shpping style?"</string>
    <string name="profile_food_preference">Food preferances/allergies</string>
    <string name="profile_enthnicity">"What's your ethnicity?"</string>
    <string name="profile_enthnicity_hindu">Hindu</string>
    <string name="profile_enthnicity_sikh">Sikh</string>
    <string name="profile_enthnicity_christian">Christian</string>
    <string name="profile_enthnicity_Muslim">Muslim</string>
    <string name="profile_enthnicity_other">Other</string>
    <string name="save">Save</string>
    <string name="wallet_cash_out">Cash out</string>
    <string name="gift_card">Gift card</string>
    <string name="confirm">Confirm</string>
    <string name="mobile">Mobile</string>
    <string name="submit_title">"HOLD UP, IT WILL TAKE A \n LITTLE WHILE."</string>
    <string name="submit_sending">Sending to Kikbac...</string>
    <string name="walk_skip">Skip</string>
    <string name="walk1_cashback">Get Cash Back Every time</string>
    <string name="walk1_earn_money">Earn Real Money</string>
    <string name="walk1_everywhere">Everywhere you shop</string>
    <string name="walk1_groceries">You shop for Groceries</string>
    <string name="walk1_not_points">Not Points</string>
    <string name="walk1_upload_receipt">Just upload your receipt</string>
    <string name="walk2_1_subtitle">Choose from an extensive list of products.</string>
    <string name="walk2_1_title">Discover &amp; Earn</string>
    <string name="walk2_2_title">Discover &amp; Earn</string>
    <string name="walk2_3_subtitle">Complete the tasks and unlock your offers.</string>
    <string name="walk2_3_title">Unlock Cash Back Rebates</string>
    <string name="navigation_drawer_close">Closed</string>
    <string name="navigation_drawer_open">Opened</string>
    <string name="categories">Categories</string>
    <string name="history">Redeem history</string>
    <string name="wallet">Wallet</string>
    <string name="wishlist">Wishlist</string>
    <string name="settings">Settings</string>
    <string name="bonuses">Bonuses</string>
    <string name="service">Service</string>
    <string name="tutorial">Tutorial</string>
    <string name="hot_selling">Hot selling</string>
    <string name="grocery">Grocery &amp; Stapie</string>
    <string name="fruits">Fruits &amp; Vegetables</string>
    <string name="household">Household</string>
    <string name="bear">Bear &amp; Beverage</string>
    <string name="beaty">Beaty &amp; Personal</string>
    <string name="hygiene">Home &amp; hygiene</string>
    <string name="female">Feminine care</string>
    <string name="creates">Creates &amp; Boxes</string>
    <string name="baby">Baby &amp; Kids</string>
    <string name="kikbac">KiKBAC</string>
    <string name="order_history">Order History</string>
    <string name="redeemeed_tab">REDEEMED</string>
    <string name="deliveries_tab">DELIVERIES</string>
    <string name="payout">Payout</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="wallet_submit">SUBMIT</string>
    <string name="update_profile">Update Profile</string>
    <string name="contact_us">Contact us</string>
    <string name="about">About</string>
    <string name="profile_update">Update Profile</string>
    <string name="listent_guide">Listen to guide</string>
    <string name="checking_guide">Check-in with the guide</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="policy">Privacy Policy</string>
    <string name="link_facebook">Link With Facebook</string>
    <string name="link_google">Link With Google</string>
    <string name="preference">Preference</string>
    <string name="notify_title">Notify</string>
    <string name="notifications">Notifications</string>
    <string name="notify">Notify \n Sound, vibrate, light</string>
    <string name="version">Version</string>
    <string name="terms_use">Terms of Use</string>
    <string name="end_user">End User</string>
    <string name="email_alerts">Email Alerts</string>
    <string name="receipt_status">Receipt Status</string>
    <string name="cash_withdrawals">Cash Withdrawals</string>
    <string name="news_letters">NewsLetters</string>
    <string name="app_alerts">App Alerts</string>
    <string name="nearby_store">Nearby store alerts</string>
    <string name="general_updates">General Updates</string>
    <string name="alert_with_sound">Alert with sound</string>
    <string name="alert_with_vibrate">Alert with vibrate</string>
    <string name="alert_with_light">Alert with light</string>
    <string name="bank_account">Bank Account %d</string>
 <string name="bank_item" formatted="false">"Name:%s,
Bank:%s,
Zip:%s,
Contact:%s"</string>
    <string name="bank_accounts">Bank accounts</string>
    <string name="bank_fill_credentials">Fill in the credentials</string>
    <string name="history_temp_total_redeem">Total Savings: %s</string>
    <string name="tracking">Tracking</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_dispathched">Order Dispatched</string>
    <string name="create_new_account">CREATE NEW\nACCOUNT</string>
</resources>