<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/FilterSidePadding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/filter_sortby"
            android:textColor="@color/textPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btnDone"
            style="@style/FilterSidePadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/done"
            android:textColor="@color/mainGreen"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/textSecondary" />

    <RadioGroup
        android:id="@+id/radioAnswers"
        style="@style/FilterSidePadding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="0dp" >

        <RadioButton
            style="@style/SurveyCheckNew"
            android:text="@string/filter_new" />

        <RadioButton
            style="@style/SurveyCheckNew"
            android:text="@string/filter_popularity" />

        <RadioButton
            style="@style/SurveyCheckNew"
            android:text="@string/filter_ending_soon" />

        <RadioButton
            style="@style/SurveyCheckNew"
            android:text="@string/filter_price_low" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/textSecondary" />

    <EditText
        style="@style/FilterSidePadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableRight="@drawable/ic_search_grey_600_24dp"
        android:hint="@string/filter_brands_hint"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:textColor="@color/textPrimary"
        android:textSize="14sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        style="@style/FilterSidePadding"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:layout_weight="1.0" />

    <Button
        android:id="@+id/btnReset"
        style="@style/BtnGreen"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_green_disabled"
        android:text="@string/reset" />

</LinearLayout>